--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,14 +12,14 @@ jobs:
     runs-on: macOS-latest
     strategy:
         matrix:
-          destination: ['platform=iOS Simulator,OS=13.0,name=iPhone 11 Pro', 'platform=iOS Simulator,OS=13.0,name=iPhone 11', 'platform=iOS Simulator,OS=13.0,name=iPhone 11 Pro Max']
+          destination: ['platform=iOS Simulator,OS=13.4,name=iPhone 11 Pro', 'platform=iOS Simulator,OS=13.4,name=iPhone 11', 'platform=iOS Simulator,OS=13.4,name=iPhone 11 Pro Max']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build and test
         run: |
-          xcodebuild clean test -project Pinny-iOS.xcodeproj -scheme Pinny-iOS -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
-          bash <(curl -s https://codecov.io/bash)
+          xcodebuild clean test -project Pinny-iOS.xcodeproj -scheme Pinny-iOS -destination "${destination}"
+#          bash <(curl -s https://codecov.io/bash)
         env: 
          destination: ${{ matrix.destination }}
 
